--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "1.7.0",
     "angular-sanitize": "1.7.0",
     "angular-touch": "1.7.0",
-    "angular-route-segment": "1.5.1"
+    "angular-route-segment": "1.5.1",
+    "angular-mocks": "^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.7.0"
