--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "1.7.0",
     "angular-touch": "1.7.0",
     "angular-route-segment": "1.5.1",
-    "angular-mocks": "^1.7.0"
+    "angular-mocks": "^1.7.0",
+    "ng-showdown": "^1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.7.0"
