Solved update-manager minor issues. Added update-manager docker config

--- a/docker/deployment-tools/deployment-tools.yml
+++ b/docker/deployment-tools/deployment-tools.yml
@@ -18,7 +18,7 @@ services:
       - SIL_URL=http://192.168.1.56:8080
       - DOCKER=True
     ports:
-      - "8002:8080"
+      - 8002:8080
     networks:
       - activage-network
 
@@ -32,6 +32,23 @@ services:
       - POSTGRES_PASSWORD=activage
     ports:
       - 8003:8080
+    networks:
+      - activage-network
+
+  update-manager:
+    image: activage-update-manager:1.0
+    environment:
+      - DOCKER_REGISTRY_SERVER_URL=https://docker-activage.satrd.es
+      - DOCKER_REGISTRY_USER=activage
+      - DOCKER_REGISTRY_PASSWORD=docker.activage
+      - STORAGE=POSTGRES
+      - POSTGRES_HOST=update-manager-database
+      - POSTGRES_PORT=5432
+      - POSTGRES_DATABASE=activage-update-manager
+      - POSTGRES_USER=activage
+      - POSTGRES_PASSWORD=activage
+    ports:
+      - 8004:8080
     networks:
       - activage-network
 
