--- a/docker/deployment-tools/sites-conf/activage-deployment-tools.conf
+++ b/docker/deployment-tools/sites-conf/activage-deployment-tools.conf
@@ -13,60 +13,45 @@ server {
 
 
 	location /api/v1/deployments {
-                proxy_pass		http://deployment-manager:8080;
-		proxy_http_version	1.1;
-	        proxy_set_header	Host		$host;
-	        proxy_set_header    	Upgrade     	$http_upgrade;
-	        proxy_set_header    	Connection  	$connection_upgrade;
-	}
-
-	location /api/v1/deployments/ {
-                proxy_pass		http://deployment-manager:8080;
-		proxy_http_version	1.1;
+          proxy_pass		http://deployment-manager:8080;
+          proxy_http_version	1.1;
 	        proxy_set_header	Host		$host;
 	        proxy_set_header    	Upgrade     	$http_upgrade;
 	        proxy_set_header    	Connection  	$connection_upgrade;
 	}
 
 	location /api/v1/records {
-                proxy_pass		http://maintenance-panel:8080;
-		proxy_http_version	1.1;
+          proxy_pass		http://maintenance-panel:8080;
+		      proxy_http_version	1.1;
 	        proxy_set_header	Host		$host;
 	        proxy_set_header    	Upgrade     	$http_upgrade;
 	        proxy_set_header    	Connection  	$connection_upgrade;
 	}
 
-	location /api/v1/records/ {
-                proxy_pass		http://maintenance-panel:8080;
-		proxy_http_version	1.1;
-	        proxy_set_header	Host		$host;
-	        proxy_set_header    	Upgrade     	$http_upgrade;
-	        proxy_set_header    	Connection  	$connection_upgrade;
-	}
+	location /api/v1/registry {
+            proxy_pass		http://update-manager:8080;
+  		      proxy_http_version	1.1;
+  	        proxy_set_header	Host		$host;
+  	        proxy_set_header    	Upgrade     	$http_upgrade;
+  	        proxy_set_header    	Connection  	$connection_upgrade;
+  }
 
 	location ~ ^/api/v1/(platforms|clients|devices) {
-                proxy_pass		http://component-configurator:8080;
-		proxy_http_version	1.1;
+          proxy_pass		http://component-configurator:8080;
+		      proxy_http_version	1.1;
 	        proxy_set_header	Host		$host;
 	        proxy_set_header    	Upgrade     	$http_upgrade;
 	        proxy_set_header    	Connection  	$connection_upgrade;
 	}
 
-	location ~ ^/api/v1/(platforms|clients|devices)/ {
-                proxy_pass		http://component-configurator:8080;
-		proxy_http_version	1.1;
+  location /deployment-tools/ {
+          proxy_pass		http://component-configurator:8080/;
+		      proxy_http_version	1.1;
 	        proxy_set_header	Host		$host;
 	        proxy_set_header    	Upgrade     	$http_upgrade;
 	        proxy_set_header    	Connection  	$connection_upgrade;
-	}
+  }
 
-        location /deployment-tools/ {
-                proxy_pass		http://component-configurator:8080/;
-		proxy_http_version	1.1;
-	        proxy_set_header	Host		$host;
-	        proxy_set_header    	Upgrade     	$http_upgrade;
-	        proxy_set_header    	Connection  	$connection_upgrade;
-        }
 }
 
 server {
