Primera versión distribuida

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,7 @@
-CLIENT_ID=Oscar
-SIL_URL=http://192.168.1.56:8080
+CLIENT_ID=Otro
+SIL_URL=http://activage-test-intermw.inter-iot.eu
+CALLBACK_URL=http://192.168.1.192:8080
+RECEIVING_CAPACITY=1
+RESPONSE_FORMAT=JSON_LD
+RESPONSE_DELIVERY=SERVER_PUSH
+BASE_PATH=/api/mw2mw/
