--- a/docker/component-configurator/docker-compose.yml
+++ b/docker/component-configurator/docker-compose.yml
@@ -2,10 +2,15 @@ version: '3'
 
 services:
   activage-component-configurator:
-    image: activage-component-configurator:2.0
+    image: docker-activage.satrd.es/component-configuration:brussels-demo-19-v0.1
     environment:
       - CLIENT_ID=Oscar
-      - SIL_URL=http://192.168.1.56:8080
+      - SIL_URL=http://activage-test-intermw.inter-iot.eu
       - DOCKER=True
+      - CALLBACK_URL=http://192.168.1.192:8002
+      - RECEIVING_CAPACITY=1
+      - RESPONSE_FORMAT=JSON_LD
+      - RESPONSE_DELIVERY=SERVER_PUSH
+      - BASE_PATH=/api/mw2mw/
     ports:
       - "8002:8080"
