--- a/docker/deployment-tools/update-manager-dependencies.yml
+++ b/docker/deployment-tools/update-manager-dependencies.yml
@@ -9,3 +9,9 @@ services:
       - POSTGRES_DB=activage-update-manager
     ports:
       - 5432:5432
+    networks:
+      - activage-network
+
+networks:
+  activage-network:
+    external: true
