--- a/docker/component-configurator/docker-compose.yml
+++ b/docker/component-configurator/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   activage-component-configurator:
-    image: activage-component-configurator:2.0
+    image: docker-activage.satrd.es/component-configuration:2.2
     environment:
       - CLIENT_ID=Oscar
       - SIL_URL=http://activage-test-intermw.inter-iot.eu
       - DOCKER=True
-      - CALLBACK_URL=http://192.168.1.192:8002
+      - CALLBACK_URL=http://192.168.1.10:8002
       - RECEIVING_CAPACITY=1
       - RESPONSE_FORMAT=JSON_LD
       - RESPONSE_DELIVERY=SERVER_PUSH
