--- a/docker/deployment-tools/deployment-tools.yml
+++ b/docker/deployment-tools/deployment-tools.yml
@@ -2,6 +2,18 @@ version: '3.7'
 
 services:
 
+  frontend:
+    image: docker-activage.satrd.es/deployment-tools-frontend:1.0
+    ports:
+      - 9000:8080
+    environment:
+      - SECURITY_ENABLED=true
+      - SECURITY_REALM=demo
+      - SECURITY_KEYCLOAK_URL=https://keycloak-activage.hopu.eu/auth
+      - SECURITY_CLIENT_ID=deployment-tools-login
+    networks:
+      - activage-network
+
   deployment-manager:
     image: docker-activage.satrd.es/deployment-manager:1.0
     ports:
