--- a/docker/deployment-tools/sites-conf/activage-deployment-tools.conf
+++ b/docker/deployment-tools/sites-conf/activage-deployment-tools.conf
@@ -65,7 +65,7 @@ server {
 	            proxy_set_header    	    Connection  	$connection_upgrade;
         	}
 
-          proxy_pass		        http://component-configurator:8080/;
+          proxy_pass		        http://frontend:8080/;
 		      proxy_http_version	  1.1;
 	        proxy_set_header	    Host		$host;
 	        proxy_set_header    	Upgrade     	$http_upgrade;
